[package]
name = "achvgames-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
async-std = { version = "1.11.0", features = ["attributes"] }
surf = "2.3.2"
itertools = "0.10.3"
futures = "0.3.21"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "migrate" ] }
lazy_static = "1.4.0"
tide = "0.16.0"
async-graphql = "5.0.5"
async-graphql-tide = "5.0.5"
base64 = "0.21.0"
chaining = "0.1.0"
